<resources>
    <string name="app_name">CrowdSocial</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="i_am_in">I AM IN!</string>
    <string name="when">When</string>
    <string name="where">Where</string>
    <string name="committed">Committed</string>
    <string name="participating">Participating</string>
    <string name="invited">Invited</string>
    <string name="title_activity_create_event">Create Event</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="action_create">Add</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="action_account">Account</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="add_invitees">Add Invitees</string>
    <string name="previous">Previous</string>
    <string name="create_event">Create Event</string>
    <string name="event">Event</string>
    <string name="amount">Amount</string>
    <string name="venue">Venue</string>
    <string name="event_date">Event Date</string>
    <string name="description">Description</string>
    <string name="Free">Free</string>
    <string name="invitation_crowdsocial">Invitation to join Event on CrowdSocial</string>
    <string name="no_picture_taken">No Picture was taken</string>
    <string name="event_created">Event Created!</string>
    <string name="no_invitations_sent">No email invitations sent</string>
    <string name="invitation_template">You are invited by {user_email} to join their Event <b>{event_title}!</b> on CrowdSocial.<br/><br/> Click on the link below to accept the invite: {link}</string>
    <string name="not_able_to_load_event">Not able to load event</string>
    <string name="invalid_login">Invalid login credentials</string>
    <string name="invalid_registration">Not able to register user</string>
    <string name="no_email_clients_installed">There are no email clients installed.</string>
    <string name="add_image">Add Image</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="enter_valid_event_details">Please enter valid event details</string>

    <string-array name="theme">
        <item>sport</item>
        <item>tasting</item>
        <item>picnic</item>
        <item>outing</item>
    </string-array>
</resources>
