<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:padding="@dimen/activity_horizontal_margin"
             tools:context="com.crowdsocial.fragment.Step1Fragment">

    <EditText
        android:id="@+id/etEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_below="@id/etEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/venue"
        android:layout_marginTop="10dp"
        android:maxLines="3"/>


    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_below="@id/etAddress"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:maxLines="3"/>

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/etDescription"
        android:hint="@string/amount"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        android:onClick="nextStep"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right|bottom"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setEventDate"
        android:hint="@string/date"
        android:id="@+id/etDate"
        android:layout_below="@id/etAmount" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image"
        android:id="@+id/btnCamera"
        android:onClick="onLaunchCamera"
        android:layout_below="@+id/etDate"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivEvent"
        android:layout_below="@+id/btnCamera"
        android:layout_alignParentStart="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="47dp"/>

</RelativeLayout>
