<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:paddingLeft="25dp"
              android:paddingRight="25dp"
              android:paddingBottom="25dp"
              android:layout_height="match_parent">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/register"
        android:textOn="@string/login"
        android:showText="true"
        android:id="@+id/swLoginReg"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/etEmail"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/etPassword"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btLoginReg"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>