<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.crowdsocial.fragment.Step1Fragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:id="@+id/btnBack"
        android:onClick="previousStep"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/btnNext"
        android:onClick="nextStep"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:onClick="setEventDate"
        android:id="@+id/btnDate"
        android:layout_below="@+id/etAmount"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="52dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tvDate"
        android:layout_marginTop="65dp"
        android:layout_toRightOf="@+id/btnDate"/>

</RelativeLayout>
