<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.crowdsocial.EventDetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/ivEvent"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvLocation"
        android:textColor="#FFFFFF"
        android:layout_alignBottom="@+id/ivEvent"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ivEvent"
        android:id="@+id/rlParticipate"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_in"
            android:id="@+id/btParticipate"
            android:layout_marginEnd="20dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerInParent="true"
            android:text="Medium Text"
            android:id="@+id/tvAmount"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rlParticipate"
        android:id="@+id/rlParticipateCount"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvParticipateCount"
            android:layout_marginEnd="20dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerInParent="true"
            android:text="@string/total_participating"
            android:id="@+id/tvParticipating"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rlParticipateCount"
        android:id="@+id/rlCommitted"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvCommittedAmount"
            android:layout_marginEnd="20dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerInParent="true"
            android:text="@string/committed"
            android:id="@+id/tvCommitted"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rlCommitted"
        android:id="@+id/rlDateTime"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvDateTime"
            android:layout_marginEnd="20dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerInParent="true"
            android:text="@string/when"
            android:id="@+id/tvWhen"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rlDateTime"
        android:id="@+id/rlLocation"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_centerInParent="true"
            android:text="@string/where"
            android:id="@+id/tvWhere"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Random Text"
        android:layout_below="@+id/rlLocation"
        android:id="@+id/tvDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
